# rust-capstone

./: Cargo.toml  env.nix
migrations/2024-04-14-154912_create_vault/: down.sql  up.sql
src/: README.md  cli.rs  client.rs  encryption.rs  lib.rs  schema.rs  server.rs  user.rs  vault.rs
