[package]
name = "rust-capstone"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/cli.rs"

[dependencies]
aes = "0.7.5"
block-modes = "0.8.1"
block-padding = "0.3.3"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
url = "2.5.0"
base64 = "0.22.0"
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15"
actix-web = "3.0"
actix-rt = "2.5"

[dependencies.openssl-sys]
version = "0.9.102"
features = ["vendored"]